<?xml version="1.0"?>
<package format="2">
  <name>teaserpp</name>
  <version>1.0.0</version>
  <description>TEASER++</description>

  <maintainer email="jnshi@mit.edu">Jingnan Shi</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>eigen</depend>

  <export>
    <!-- Specify that this is not really a catkin package-->
    <build_type>cmake</build_type>
  </export>
</package>
